k8s/k8s-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genkart-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: genkart-client
  template:
    metadata:
      labels:
        app: genkart-client
    spec:
      containers:
        - name: client
          image: chirag117/gen-client:v1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: genkart-client
spec:
  selector:
    app: genkart-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
