k8s/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: genkart-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - genkart.com
      secretName: genkart-tls
  rules:
    - host: genkart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: genkart-client
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: genkart-server
                port:
                  number: 5555
